k8s-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-hellokube
spec:
  selector:
    app: go-hellokube
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
#
# The konghq.com/strip-path: "true" will strip off the path
# whatever is defined in the http paths path file (ie. /test)
# so that if you send /test/hi, the microservice just sees /hi
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hellokube
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: go-hellokube
                port:
                  number: 80
